@@ -13,6 +13,9 @@ Here is a history of user visible changes to Mailman.
 
   Bug Fixes and other patches
 
+    - @listname entries in *_these_nonmembers are no longer case sensitive.
+      Bug #705715.
+
     - Changed bin/rmlist to also remove heldmsg files for the removed list and
       fixed a problem with removal of stale locks for the list.  Bug #700528.
 
